--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
     "compilerOptions": {
+        "experimentalDecorators": true,
+        "jsx": "preserve",
         "target": "ES2017",
         "module": "commonjs",
         "sourceMap": true,
